--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
                 <a href="index.html" id="Home">Home</a>
 
             <a href="Shop.html">Shop</a>
-            <select name="res" id="Resources">
-                <option value="#resource1">Resources</option>
-                <option value="#resource2">Resource2</option>
-                </select>
+            <a href = "Cart.html"id="Resources">Cart
+            </a>
                 
                 <select name="what's new" id="new">
                     <option value="#content1">What's new</option>
