--- a/Shop.html
+++ b/Shop.html
@@ -3,25 +3,46 @@
     <title>Shop</title>
 </head>
 <body>
+    <div class="navbar">
+        <ul>
+            <h2>shopify</h2>
+
+                <a href="index.html" id="Home">Home</a>
+
+            <a href="Shop.html">Shop</a>
+            <select name="res" id="Resources">
+                <option value="#resource1">Resources</option>
+                <option value="#resource2">Resource2</option>
+                </select>
+                
+                <select name="what's new" id="new">
+                    <option value="#content1">What's new</option>
+                    <option value="#content2">Content1</option>
+                </select>
+
+                <a href="login.html">Log in</a>
+        </ul>
+    </div>
 <main>
     <link rel="stylesheet" href="shopstyle.css">
 
     <div class="container">
-    <div id="item1"><img src="itemsimages/bobotaks-kTATJGIbtOE-unsplash.jpg" alt="Not found"><p>₹1000</p><button>Add to cart</button></div>
-    <div id="item1"><img src="itemsimages/chocolate-coffee-beans-beige-paper.jpg" alt="Not found"><p>₹1900</p><button>Add to cart</button></div>
-    <div id="item1"><img src="itemsimages/daniil-silantev-1P6AnKDw6S8-unsplash.jpg" alt="Not found"><p>₹1500</p><button>Add to cart</button></div>
-    <div id="item1"><img src="itemsimages/decorative-book-blue-background (1).jpg" alt="Not found"><p>₹1700</p><button>Add to cart</button></div>
-    <div id="item1"><img src="itemsimages/florian-krumm-1osIUArK5oA-unsplash.jpg" alt="Not found"><p>₹1500</p><button>Add to cart</button></div>
-    <div id="item1"><img src="itemsimages/front-view-juices-different-colors-dark-islated-surface.jpg" alt="Not found"><p>₹10000</p><button>Add to cart</button></div>
-    <div id="item1"><img src="itemsimages/pat-taylor-12V36G17IbQ-unsplash.jpg" alt="Not found"><p>₹1400</p><button>Add to cart</button></div>
-    <div id="item1"><img src="itemsimages/chocolate-coffee-beans-beige-paper.jpg" alt="Not found"><p>₹1700</p><button>Add to cart</button></div>
-    <div id="item1"><img src="itemsimages/decorative-book-blue-background (1).jpg" alt="Not found"><p>₹1900</p><button>Add to cart</button></div>
-    <div id="item1"><img src="itemsimages/chocolate-coffee-beans-beige-paper.jpg" alt="Not found"><p>₹1300</p><button>Add to cart</button></div>
-    <div id="item1"><img src="itemsimages/daniil-silantev-1P6AnKDw6S8-unsplash.jpg" alt="Not found"><p>₹1200</p><button>Add to cart</button></div>
-    <div id="item1"><img src="itemsimages/decorative-book-blue-background (1).jpg" alt="Not found"><p>₹1800</p><button>Add to cart</button></div>
+    <div class="item" id="item1"><img src="itemsimages/bobotaks-kTATJGIbtOE-unsplash.jpg" alt="Not found"><p>&#8377;1000</p><button data-item-id="1">Add to cart</button></div>
+    <div class="item"id="item2"><img src="itemsimages/chocolate-coffee-beans-beige-paper.jpg" alt="Not found"><p>&#8377;1900</p><button data-item-id="2">Add to cart</button></div>
+    <div class="item"id="item3"><img src="itemsimages/daniil-silantev-1P6AnKDw6S8-unsplash.jpg" alt="Not found"><p>&#8377;1500</p><button data-item-id="3">Add to cart</button></div>
+    <div class="item"id="item4"><img src="itemsimages/decorative-book-blue-background (1).jpg" alt="Not found"><p>&#8377;1700</p><button data-item-id="4">Add to cart</button></div>
+    <div class="item"id="item5"><img src="itemsimages/florian-krumm-1osIUArK5oA-unsplash.jpg" alt="Not found"><p>&#8377;1500</p><button data-item-id="5">Add to cart</button></div>
+    <div class="item"id="item6"><img src="itemsimages/front-view-juices-different-colors-dark-islated-surface.jpg" alt="Not found"><p>&#8377;10000</p><button data-item-id="6">Add to cart</button></div>
+    <div class="item"id="item7"><img src="itemsimages/pat-taylor-12V36G17IbQ-unsplash.jpg" alt="Not found"><p>&#8377;1400</p><button data-item-id="7">Add to cart</button></div>
+    <div class="item"id="item8"><img src="itemsimages/chocolate-coffee-beans-beige-paper.jpg" alt="Not found"><p>&#8377;1700</p><button data-item-id="8">Add to cart</button></div>
+    <div class="item"id="item9"><img src="itemsimages/decorative-book-blue-background (1).jpg" alt="Not found"><p>&#8377;1900</p><button data-item-id="9">Add to cart</button></div>
+    <div class="item"id="item10"><img src="itemsimages/chocolate-coffee-beans-beige-paper.jpg" alt="Not found"><p>&#8377;1300</p><button data-item-id="10">Add to cart</button></div>
+    <div class="item"id="item11"><img src="itemsimages/daniil-silantev-1P6AnKDw6S8-unsplash.jpg" alt="Not found"><p>&#8377;1200</p><button data-item-id="11">Add to cart</button></div>
+    <div class="item"id="item12"><img src="itemsimages/decorative-book-blue-background (1).jpg" alt="Not found"><p>&#8377;1800</p><button data-item-id="12">Add to cart</button></div>
 
     </div>
 
 </main>
+<script src="Cart.html"></script>
 </body>
 </html>
