--- a/login.html
+++ b/login.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+
+    <div class="navbar">
+        <ul>
+            <h2>shopify</h2>
+
+                <a href="index.html" id="Home">Home</a>
+
+            <a href="Shop.html">Shop</a>
+            <select name="res" id="Resources">
+                <option value="#resource1">Resources</option>
+                <option value="#resource2">Resource2</option>
+                </select>
+                
+                <select name="what's new" id="new">
+                    <option value="#content1">What's new</option>
+                    <option value="#content2">Content1</option>
+                </select>
+
+                <a href="login.html">Log in</a>
+        </ul>
+    </div>
     <main>
         <div class="content">
             <form">
