--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
     <div class="navbar">
         <ul>
             <h2>shopify</h2>
@@ -14,24 +15,21 @@
                 <a href="index.html" id="Home">Home</a>
 
             <a href="Shop.html">Shop</a>
-            <a href = "Cart.html"id="Resources">Cart
-            </a>
-                
-                <select name="what's new" id="new">
-                    <option value="#content1">What's new</option>
-                    <option value="#content2">Content1</option>
-                </select>
-
+            <a href = "Cart.html"id="Resources">Cart</a>
+                <a href="registration.html"> Register now</a>
                 <a href="login.html">Log in</a>
         </ul>
     </div>
+    </nav>
+
+    
     <main>
         <div class="leftcontent">
         <p>Shopify online store</p>
         <h1>Everything you need to Buy online</h1>
         <p>Creating your one-of-a-kind online store has never been easier,faster,or more scalable.</p>
         <div class="inside">
-        <input type="text" id="email" placeholder="               Enter your email address"><button id="trail">start free trail</button>
+        <input type="text" id="email" placeholder="Enter your email address"><button id="trail">Start free trail</button>
         </div>    
     </div>
         <div class="rightcontent">
