--- a/login.html
+++ b/login.html
@@ -8,34 +8,29 @@
 </head>
 <body>
 
-    <div class="navbar">
-        <ul>
-            <h2>shopify</h2>
-
+    <nav>
+        <div class="navbar">
+            <ul>
+                <h2>shopify</h2>
                 <a href="index.html" id="Home">Home</a>
-
-            <a href="Shop.html">Shop</a>
-            <select name="res" id="Resources">
-                <option value="#resource1">Resources</option>
-                <option value="#resource2">Resource2</option>
-                </select>
-                
-                <select name="what's new" id="new">
-                    <option value="#content1">What's new</option>
-                    <option value="#content2">Content1</option>
-                </select>
-
+                <a href="Shop.html">Shop</a>
+                <a href = "Cart.html"id="Resources">Cart</a>
+                <a href="registration.html"> Register now</a>
                 <a href="login.html">Log in</a>
-        </ul>
-    </div>
+            </ul>
+        </div>
+    </nav>
+
+        
     <main>
         <div class="content">
             <form">
-                <h2>Enter you details</h2>
-                <input type="text" placeholder="Enter your name" required>
-                <input type="text" placeholder="Enter your email address" required>
-                <input type="text" placeholder="Enter your institution" required>
-                <button type="submit">Submit</button>
+                <h2>Login</h2>
+                <input type="text" placeholder="Username"required>
+                <input type="password" placeholder="Password" required>
+                <button type="submit">Login</button>
+
+                <p>Not a Member ? <a href="register.html">Signup</a></p>
             </form>
         </div>
     </main>
